--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,8 @@
 ---
-name: Template
-main: blugin\template\Loader
-version: 0.1.0
+name: Boomshakalaka
+main: kim\present\test\Boomshakalaka
+version: 1.0.0
 api: [ 4.0.0 ]
-author: AuthorName
-description: Template of Pocketmine-MP plugin
+author: PresentKim
+description: Simple perfomance test tool!
 ...
